reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__epistemics__contradiction.rs_line_120_col_5_001.log

*** crates/tracewake-core/src/epistemics/contradiction.rs:120:5: replace detect_expected_absences -> Vec<ExpectedAbsenceDetection> with vec![Default::default()]

*** mutation diff:
--- crates/tracewake-core/src/epistemics/contradiction.rs
+++ replace detect_expected_absences -> Vec<ExpectedAbsenceDetection> with vec![Default::default()]
@@ -112,78 +112,17 @@
     checked_container_id: &ContainerId,
     observed_item_ids: &BTreeSet<ItemId>,
     expectation_beliefs: &[&Belief],
     observation_id: &ObservationId,
     source_event_id: &EventId,
     detected_tick: SimTick,
     confidence: Confidence,
 ) -> Vec<ExpectedAbsenceDetection> {
-    let mut detections = Vec::new();
-    for belief in expectation_beliefs {
-        if belief.holder() != &HolderKind::Actor(holder_actor_id.clone())
-            || belief.stance() != Stance::ExpectsTrue
-        {
-            continue;
-        }
-        let Proposition::ItemLocatedInContainer {
-            item_id,
-            container_id,
-        } = belief.proposition()
-        else {
-            continue;
-        };
-        if container_id != checked_container_id || observed_item_ids.contains(item_id) {
-            continue;
-        }
-
-        let observed_proposition = Proposition::ItemMissingFromExpectedLocation {
-            item_id: item_id.clone(),
-            expected_location: Location::InContainer(checked_container_id.clone()),
-        };
-        let contradiction_id = ContradictionId::new(format!(
-            "contradiction.{}.{}",
-            observation_id.as_str(),
-            item_id.as_str()
-        ))
-        .unwrap();
-        let missing_belief_id = BeliefId::new(format!(
-            "belief.missing.{}.{}",
-            observation_id.as_str(),
-            item_id.as_str()
-        ))
-        .unwrap();
-        let contradiction = Contradiction::new(
-            contradiction_id.clone(),
-            holder_actor_id.clone(),
-            ContradictionKind::ExpectedItemAbsentFromContainer,
-            belief.belief_id().clone(),
-            observation_id.clone(),
-            belief.proposition().clone(),
-            observed_proposition.clone(),
-            detected_tick,
-        );
-        let missing_belief = Belief::new(
-            missing_belief_id,
-            HolderKind::Actor(holder_actor_id.clone()),
-            observed_proposition,
-            Stance::BelievesTrue,
-            confidence,
-            SourceRef::Event(source_event_id.clone()),
-            detected_tick,
-        )
-        .with_channel(Channel::AbsenceMarker)
-        .with_observation(observation_id.clone())
-        .with_contradiction(contradiction_id);
-        detections.push(ExpectedAbsenceDetection {
-            contradiction,
-            missing_belief,
-        });
-    }
-    detections
+    vec![Default::default()] /* ~ changed by cargo-mutants ~ */
 }
 
 #[cfg(test)]
 mod tests {
     use super::*;
     use crate::epistemics::observation::Confidence;
     use crate::ids::{ContainerId, ItemId};
 


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/epistemics/contradiction.rs` has changed (1781908496.123925414s, 6s after last build at 1781908490.987925425s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused imports: `HolderKind` and `Stance`
 --> crates/tracewake-core/src/epistemics/contradiction.rs:3:41
  |
3 | use crate::epistemics::belief::{Belief, HolderKind, Stance};
  |                                         ^^^^^^^^^^  ^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused imports: `Channel` and `SourceRef`
 --> crates/tracewake-core/src/epistemics/contradiction.rs:5:38
  |
5 | use crate::epistemics::observation::{Channel, Confidence, SourceRef};
  |                                      ^^^^^^^              ^^^^^^^^^

warning: unused import: `crate::location::Location`
  --> crates/tracewake-core/src/epistemics/contradiction.rs:10:5
   |
10 | use crate::location::Location;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `Channel`
 --> crates/tracewake-core/src/epistemics/contradiction.rs:5:38
  |
5 | use crate::epistemics::observation::{Channel, Confidence, SourceRef};
  |                                      ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `ExpectedAbsenceDetection: Default` is not satisfied
   --> crates/tracewake-core/src/epistemics/contradiction.rs:120:10
    |
120 |     vec![Default::default()] /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ExpectedAbsenceDetection`
   --> crates/tracewake-core/src/epistemics/contradiction.rs:42:1
    |
 42 | pub struct ExpectedAbsenceDetection {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 3 warnings
error: could not compile `tracewake-core` (lib) due to 1 previous error; 3 warnings emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `tracewake-core` (lib test) generated 1 warning
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
